echoserver-ingress/catweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catweb
  labels:
    app: catweb
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: catweb
