echoserver-ingress/echoserver-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: echoserver
spec:
  virtualhost:
    fqdn: echoserver.h2o-4-1478.h2o.vmware.com
    rateLimitPolicy:
      local:
        requests: 20
        unit: minute
    tls:
      secretName: echoserver-tls-secret
  routes:
    - conditions:
      - prefix: /
      services:
        - name: echoserver
          port: 80
      requestHeadersPolicy:
        set:
          - name: Coffee-Needed
            value: always
    - conditions:
      - prefix: /catweb
      services:
        - name: catweb
          port: 80
