echoserver-ingress/echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
spec:
  rules:
  - host: echoserver.h2o-4-1478.h2o.vmware.com
    http:
      paths: 
      - backend:
          service:
            name: echoserver
            port:
              number: 80
        pathType: Prefix
        path: /
